[tool.poetry]
name = "dpongpy"
packages = [
    { include = "dpongpy" },
]
version = "2.1.6"
description = "A template for Python projects, using Poetry"
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10.0 < 4.0.0"
pygame = "^2.6.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.27.0"
poetry = "^1.8.3"
pytest = "^8.2.2"

[tool.poe.tasks]
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy dpongpy tests"
compile = "python -m compileall dpongpy tests"

[tool.poetry.scripts]
dpongpy = "dpongpy:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.mypy]
ignore_missing_imports = true
implicit_optional = true
allow_redefinition = true
