[tool.poetry]
name = "dpongpy"
packages = [
    { include = "dpongpy" },
]
version = "1.1.0"
description = "Didactical implementation of PONG as an online multiplayer game, aimed at exemplifying distributed systems"
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10.0 < 4.0.0"
pygame = "^2.6.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.38.0"
poetry = "^2.0.0"
pytest = "^9.0.0"

[tool.poe.tasks]
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy dpongpy tests"
compile = "python -m compileall dpongpy tests"

[tool.poetry.scripts]
dpongpy = "dpongpy:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.mypy]
ignore_missing_imports = true
implicit_optional = true
allow_redefinition = true
